# cnn_regularity

./: README.md  evaluate_unet.py  matpy.py  pyproject.toml  unet_training.py
data/: phantom.npy  phantom_no_boundary.npy  phantom_noisy.npy  phantom_noisy_no_boundary.npy
data/circles/: n_samples_10000_n_circles_5_sigma_0.5_mu_0.5.csv  n_samples_10000_n_circles_5_sigma_0.5_mu_0.5_noisy.csv  n_samples_10000_n_circles_5_sigma_0.5_mu_0.5sigma_noise_0.01.csv
models/: circles_torch_dataset.py  create_circles_csv.py  matpy.py  sample_circles.py
models/trunks/: unet.py  unet_parts.py
