[tool.poetry]
name = "cnn-regularity"
version = "0.1.0"
description = ""
authors = ["habring <andreas.habring@uni-graz.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.2"
torch = "^2.0.0"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
dill = "^0.3.6"
torchvision = "^0.15.1"
tdqm = "^0.0.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
